# NAFnROME

./: .gitignore  01_BUILD__rome_csv.ipynb  02_BUILD__naf_codes_001_csv.ipynb  03_EXTRACT_naf_codes_001_desc_csv__from_pdf.ipynb  04_GEN__rome_with_naf_csv.ipynb  05_BUILD__fusion_naf_rome_001_csv.ipynb  06_FIND_best_NAF_codes_from_keywords_.ipynb  README.md  fusion_naf_rome_001_thenlper_gte-large.csv  pyproject.toml  requirements.txt  rome_with_naf_all-MiniLM-L6-v2.csv
