[tool.poetry]
name = "data"
version = "0.1.0"
description = "Local data exploration"
authors = ["Fabien M."]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.36.1"
plotly = "^6.5.0"
numpy = "^2.3.5"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
kaleido = "^1.2.0"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
requests = "^2.32.5"
transformers = "^4.57.3"
geopy = "^2.4.1"
pillow = "^12.0.0"
pytesseract = "^0.3.13"
pyproj = "^3.7.2"
selenium = "^4.39.0"
webdriver-manager = "^4.0.2"
beautifulsoup4 = "^4.14.3"
ddgs = "^9.9.3"
unidecode = "^1.4.0"
xlsxwriter = "^3.2.9"
scikit-learn = "^1.8.0"
joblib = "^1.5.3"
folium = "^0.20.0"
staticmap = "^0.5.7"
fastexcel = "^0.18.0"
xmltodict = "^1.0.2"
pypdf = "^6.4.2"
pdfplumber = "^0.11.8"
rapidfuzz = "^3.14.3"
sentence-transformers = "^5.2.0"
chromadb = "^1.3.7"
ollama = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
